--- a/UseCase1_NET_Senior_Dima_Panteliuk/appsettings.json
+++ b/UseCase1_NET_Senior_Dima_Panteliuk/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "CountriesApi": {
+    "Url": "https://restcountries.com/v3.1/all"
+  }
 }
